[package]
name = "mikuinetd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
crossterm = "0.27.0"
itertools = "0.12.1"
ratatui = "0.26.2"
russh = "0.43.0"
tokio = { version = "1.37.0", features = ["full"] }
